# elixir-turboquant-llm

./: .clangd  .gitignore  CMakeLists.txt  Makefile  build.cmake  clean.cmake  mix.exs
c_src/: llama_nif.cpp
lib/: elixir_turboquant_llm.ex  multiplayer_fabric_turboquant.ex
lib/elixir_turboquant_llm/: application.ex  downloader.ex  nif.ex  nif_behaviour.ex  session.ex
lib/multiplayer_fabric_turboquant/: application.ex  nif.ex  session.ex
test/: downloader_test.exs  elixir_turboquant_llm_test.exs  multiplayer_fabric_turboquant_test.exs  property_test.exs  session_test.exs  test_helper.exs
test/support/: mocks.ex
